syntax = "proto3";
package hyperlane.core.post_dispatch.v1;

option go_package = "github.com/troykessler/hyperlane-cosmos/x/core/02_post_dispatch/types";

// InsertedIntoTree ...
message EventCreateMerkleTreeHook {

  // id ...
  string id = 1;

  // mailbox_id ...
  string mailbox_id = 2;

  string owner = 3;
}

// InsertedIntoTree ...
message InsertedIntoTree {

  // message_id ...
  string message_id = 1;

  // index ...
  uint32 index = 2;

  // merkle_tree_hook_id ...
  string merkle_tree_hook_id = 3;
}

// GasPayment ...
message GasPayment {

  // message_id ...
  string message_id = 1;

  // destination ...
  uint32 destination = 2;

  // gas_amount ...
  string gas_amount = 3;

  // payment ...
  string payment = 4;

  // igp_id ...
  string igp_id = 5;
}

// InsertedIntoTree ...
message EventCreateNoopHook {

  // id ...
  string id = 1;

  // owner ...
  string owner = 2;
}