syntax = "proto3";
package hyperlane.core.post_dispatch.v1;

option go_package = "github.com/troykessler/hyperlane-cosmos/x/core/02_post_dispatch/types";

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

// InterchainGasPaymaster ...
message InterchainGasPaymaster {
  // id ...
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/troykessler/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  // owner ...
  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // denom ...
  string denom = 3;

  // claimable_fees ...
  repeated cosmos.base.v1beta1.Coin claimable_fees = 4 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// DestinationGasConfig ...
message DestinationGasConfig {
  // remote_domain ...
  uint32 remote_domain = 1;

  // gas_oracle ...
  GasOracle gas_oracle = 2;

  // gas_overhead ...
  string gas_overhead = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// GasOracle ...
message GasOracle {
  // token_exchange_rate ...
  string token_exchange_rate = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // gas_price ...
  string gas_price = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// MerkleTreeHook ...
message MerkleTreeHook {
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/troykessler/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  string mailbox_id = 2;

  // owner ...
  string owner = 3 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // tree ...
  Tree tree = 4;
}

// Tree represents an incremental merkle tree.
// Contains current branch and the number of inserted leaves in the tree.
message Tree {
  // branch ...
  repeated bytes branch = 1;

  // count ...
  uint32 count = 2;
}

// NoopHook ...
message NoopHook {
  // id ...
  string id = 1 [
    (gogoproto.customtype) =
        "github.com/troykessler/hyperlane-cosmos/util.HexAddress",
    (gogoproto.nullable) = false
  ];

  // owner ...
  string owner = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}